--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/monty71" target="_blank">
+              <a href="https://www.linkedin.com/in/pr0mila" target="_blank">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
